deploy: 45e44233c707b18102243983e49df17bf0f24bf4

--- a/coverage.html
+++ b/coverage.html
@@ -2461,6 +2461,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#usePreloader">lib/src/modules/preloader/src/use-preloader.ts</a>
+            </td>
+            <td>function</td>
+            <td>usePreloader</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./pipes/ProcessLogPipe.html">lib/src/modules/process/src/process-log.pipe.ts</a>
             </td>
             <td>pipe</td>
