--- a/injectables/SectionFilterDialogViewModel.html
+++ b/injectables/SectionFilterDialogViewModel.html
@@ -272,7 +272,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:49</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:48</a></div>
                             </td>
                         </tr>
 
@@ -305,8 +305,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="114"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:114</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="113"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:113</a></div>
                         </td>
                     </tr>
 
@@ -344,8 +344,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="232"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:232</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="230"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:230</a></div>
                         </td>
                     </tr>
 
@@ -425,8 +425,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="218"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:218</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="217"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:217</a></div>
                         </td>
                     </tr>
 
@@ -464,8 +464,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="188"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:188</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="187"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:187</a></div>
                         </td>
                     </tr>
 
@@ -501,8 +501,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="171"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:171</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="170"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:170</a></div>
                         </td>
                     </tr>
 
@@ -538,8 +538,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="105"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:105</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="104"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:104</a></div>
                         </td>
                     </tr>
 
@@ -605,8 +605,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="143"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:143</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="142"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:142</a></div>
                         </td>
                     </tr>
 
@@ -648,7 +648,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:42</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:41</a></div>
                         </td>
                     </tr>
 
@@ -675,7 +675,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:41</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:40</a></div>
                         </td>
                     </tr>
 
@@ -702,7 +702,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -729,7 +729,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:44</a></div>
                         </td>
                     </tr>
 
@@ -756,7 +756,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -782,7 +782,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:49</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -809,7 +809,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:48</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -836,7 +836,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:44</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -863,7 +863,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:47</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -892,7 +892,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:59</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:58</a></div>
                                 </td>
                             </tr>
 
@@ -914,7 +914,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:63</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:62</a></div>
                                 </td>
                             </tr>
 
@@ -936,7 +936,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:67</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:66</a></div>
                                 </td>
                             </tr>
 
@@ -958,7 +958,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:71</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:70</a></div>
                                 </td>
                             </tr>
 
@@ -980,7 +980,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:75</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="74" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:74</a></div>
                                 </td>
                             </tr>
 
@@ -1002,7 +1002,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="79" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:79</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:78</a></div>
                                 </td>
                             </tr>
 
@@ -1024,7 +1024,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:83</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="82" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:82</a></div>
                                 </td>
                             </tr>
 
@@ -1046,7 +1046,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:87</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.view-model.ts:86</a></div>
                                 </td>
                             </tr>
 
@@ -1060,20 +1060,19 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {inject, Injectable, signal} from &quot;@angular/core&quot;;
 import {DialogService, DynamicDialogConfig, DynamicDialogRef} from &quot;primeng/dynamicdialog&quot;;
 import {
-  ExplorerService,
   ExplorerColumn,
+  ExplorerService,
   SectionDialogConfig,
   SectionFilterDialogConfig,
   TargetData
 } from &quot;../../../../explorer&quot;;
 import {SectionFilter} from &quot;./section-filter-dialog.constants&quot;;
-import {finalize} from &quot;rxjs&quot;;
 import {Params, QueryParamsHandling} from &quot;@angular/router&quot;;
 import {StringUtils} from &quot;../../../../../global/util&quot;;
 import {Store} from &quot;../../../../../modules/store&quot;;
 import {LocalizePipe} from &quot;../../../../../modules/locale&quot;;
 import {SortOrder} from &quot;../../../../../global/vars&quot;;
-import {PreloaderEvent} from &quot;../../../../../modules/preloader&quot;;
+import {usePreloader} from &quot;../../../../../modules/preloader/src/use-preloader&quot;;
 import parseParamsString &#x3D; StringUtils.parseParamsString;
 import stringifyParamsObject &#x3D; StringUtils.stringifyParamsObject;
 import createFieldFilterForm &#x3D; SectionFilter.createFieldFilterForm;
@@ -1259,10 +1258,9 @@ export class SectionFilterDialogViewModel {
   }
 
   private getReferenceTarget() {
-    this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
-    this.explorerService.getTarget(this.column.referencedEntityName, &quot;section&quot;).pipe(finalize(() &#x3D;&gt; {
-      this.store.emit(PreloaderEvent.Hide, this.preloaderChannel);
-    })).subscribe(v &#x3D;&gt; {
+    this.explorerService.getTarget(this.column.referencedEntityName, &quot;section&quot;).pipe(
+      usePreloader(this.store, this.preloaderChannel),
+    ).subscribe(v &#x3D;&gt; {
       this._referencedTarget.set(v);
       if (this.isReference &amp;&amp; this.referenceField?.ref) {
         const parts &#x3D; this.referenceField.ref.split(&quot;.&quot;);
