--- a/miscellaneous/functions.html
+++ b/miscellaneous/functions.html
@@ -192,6 +192,9 @@
                         <li>
                             <a href="#stringifyParamsObject" title="lib/src/global/util/src/string.utils.ts" ><b>stringifyParamsObject</b>&nbsp;&nbsp;&nbsp;(lib/.../string.utils.ts)</a>
                         </li>
+                        <li>
+                            <a href="#usePreloader" title="lib/src/modules/preloader/src/use-preloader.ts" ><b>usePreloader</b>&nbsp;&nbsp;&nbsp;(lib/.../use-preloader.ts)</a>
+                        </li>
                     </ul>
                 </td>
             </tr>
@@ -1358,6 +1361,74 @@
                             <b>Returns : </b>    <code>ExplorerRendererProvider[]</code>
 
                         </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</section>    <h3>lib/src/modules/preloader/src/use-preloader.ts</h3>
+    <section data-compodoc="block-methods">
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="usePreloader"></a>
+                    <span class="name">
+                        <span ><b>usePreloader</b></span>
+                        <a href="#usePreloader"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>usePreloader(store: <a href="../injectables/Store.html" target="_self">Store</a>, preloaderCn: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>)</code>
+                </td>
+            </tr>
+
+
+
+
+            <tr>
+                <td class="col-md-4">
+
+                            <div class="io-description">
+                                <b>Parameters :</b>
+                                
+                                <table class="params">
+                                    <thead>
+                                        <tr>
+                                            <td>Name</td>
+                                                <td>Type</td>
+                                            <td>Optional</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                                <td>store</td>
+                                            <td>
+                                                            <code><a href="../injectables/Store.html" target="_self" >Store</a></code>
+                                            </td>
+
+                                            <td>
+                                                    No
+                                            </td>
+
+
+                                        </tr>
+                                        <tr>
+                                                <td>preloaderCn</td>
+                                            <td>
+                                                            <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                            </td>
+
+                                            <td>
+                                                    No
+                                            </td>
+
+
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                 </td>
             </tr>
         </tbody>
