--- a/injectables/ObjectDetailsViewModel.html
+++ b/injectables/ObjectDetailsViewModel.html
@@ -285,8 +285,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="154"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:154</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="151"
+                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:151</a></div>
                         </td>
                     </tr>
 
@@ -389,8 +389,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="106"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:106</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="105"
+                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:105</a></div>
                         </td>
                     </tr>
 
@@ -426,8 +426,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="186"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:186</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="183"
+                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:183</a></div>
                         </td>
                     </tr>
 
@@ -627,8 +627,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="133"
-                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:133</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="131"
+                                    class="link-to-prism">lib/src/components/object/src/details/object-details.view-model.ts:131</a></div>
                         </td>
                     </tr>
 
@@ -1102,7 +1102,7 @@
 import {DialogService, DynamicDialogConfig, DynamicDialogRef} from &quot;primeng/dynamicdialog&quot;;
 import {ConfirmationService} from &quot;primeng/api&quot;;
 import {TranslocoService} from &quot;@ngneat/transloco&quot;;
-import {finalize, tap, throwError} from &quot;rxjs&quot;;
+import {throwError} from &quot;rxjs&quot;;
 import {FormControl, FormGroup, Validators} from &quot;@angular/forms&quot;;
 import {catchError} from &quot;rxjs/operators&quot;;
 import {ObjectDetails} from &quot;./object-details.constants&quot;;
@@ -1110,7 +1110,6 @@ import {LocalizePipe} from &quot;../../../../modules/locale&quot;;
 import {Store} from &quot;../../../../modules/store&quot;;
 import {ColumnForm, TabForm} from &quot;../object.types&quot;;
 import {onlyLatinLettersAndNumbersValidator} from &quot;../../../../global/validator&quot;;
-import {PreloaderEvent} from &quot;../../../../modules/preloader&quot;;
 import {
   ExplorerColumn,
   ExplorerService,
@@ -1119,6 +1118,7 @@ import {
   SectionDialogConfig
 } from &quot;../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../global/vars&quot;;
+import {usePreloader} from &quot;../../../../modules/preloader/src/use-preloader&quot;;
 import createTargetForm &#x3D; ObjectDetails.createTargetForm;
 import createColumnForm &#x3D; ObjectDetails.createColumnForm;
 import createTabForm &#x3D; ObjectDetails.createTabForm;
@@ -1163,8 +1163,7 @@ export class ObjectDetailsViewModel {
 
   openTabFinder(colForm: FormGroup&lt;ColumnForm&gt;) {
     this.explorerService.getTarget(&quot;ExplorerTabEntity&quot;).pipe(
-      tap(() &#x3D;&gt; this.store.emit(PreloaderEvent.Show, this.preloaderChannel)),
-      finalize(() &#x3D;&gt; this.store.emit(PreloaderEvent.Hide, this.preloaderChannel)),
+      usePreloader(this.store, this.preloaderChannel),
     ).subscribe(targetData &#x3D;&gt; {
       import(&quot;../../../explorer&quot;).then(m &#x3D;&gt; {
         this.dialogService.open(m.ExplorerSectionComponent, {
@@ -1192,17 +1191,16 @@ export class ObjectDetailsViewModel {
     this.confirmationService.confirm({
       key: this.newTabDialogKey,
       accept: () &#x3D;&gt; {
-        this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
         const payload &#x3D; this.tabForm.getRawValue();
         this.explorerService.saveEntity(payload, &quot;ExplorerTabEntity&quot;)
           .pipe(
+            usePreloader(this.store, this.preloaderChannel),
             catchError((res) &#x3D;&gt; {
               this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {
                 title: this.ts.translate(&quot;object.details.tab.error&quot;)
               });
               return throwError(res);
             }),
-            finalize(() &#x3D;&gt; this.store.emit(PreloaderEvent.Hide, this.preloaderChannel))
           )
           .subscribe(() &#x3D;&gt; {
             this.tabForm.reset();
@@ -1215,8 +1213,8 @@ export class ObjectDetailsViewModel {
   }
 
   saveObject() {
-    this.store.emit(PreloaderEvent.Show, this.preloaderChannel);
     this.explorerService.saveTarget(this.targetForm.getRawValue()).pipe(
+      usePreloader(this.store, this.preloaderChannel),
       catchError((res) &#x3D;&gt; {
         this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {
           title: this.ts.translate(&quot;object.details.error&quot;),
@@ -1224,7 +1222,6 @@ export class ObjectDetailsViewModel {
         });
         return throwError(res);
       }),
-      finalize(() &#x3D;&gt; this.store.emit(PreloaderEvent.Hide, this.preloaderChannel))
     ).subscribe(v &#x3D;&gt; {
       this.targetForm.patchValue(v);
       v.columns.forEach(col &#x3D;&gt; this.targetForm.controls.columns.push(createColumnForm(col)));
